// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TransactionStatus > should render when confirmed 1`] = `
<div>
  <div
    class="no-ligatures css-qu17s6"
    data-testid="TransactionDetail"
  >
    <div
      class="w-40 flex-1 space-y-2 whitespace-nowrap"
      data-testid="TransactionDetail--desktop"
    >
      <div
        class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Status
      </div>
      <div
        class="flex items-center font-semibold"
      >
        <div
          class="flex flex-row-reverse items-center gap-4 md:flex-row md:gap-2"
        >
          <div
            class="text-theme-success-600 css-1i4b0eq"
            height="20"
            width="20"
          >
            <svg
              id="circle-check-mark"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                fill="none"
                stroke="currentColor"
                stroke-width="2"
              >
                <circle
                  cx="10"
                  cy="10"
                  r="9"
                  stroke-miterlimit="10"
                />
                <path
                  d="M13.6 6.5l-5 6.8c-.2.3-.6.4-.9.2l-.1-.1L6.4 12"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </g>
            </svg>
          </div>
          <span>
            Confirmed
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionStatus > should render when not confirmed 1`] = `
<div>
  <div
    class="no-ligatures css-qu17s6"
    data-testid="TransactionDetail"
  >
    <div
      class="w-40 flex-1 space-y-2 whitespace-nowrap"
      data-testid="TransactionDetail--desktop"
    >
      <div
        class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Status
      </div>
      <div
        class="flex items-center font-semibold"
      >
        <div
          class="flex flex-row-reverse items-center gap-4 md:flex-row md:gap-2"
        >
          <div
            class="text-theme-warning-300 css-1i4b0eq"
            height="20"
            width="20"
          >
            <svg
              id="clock"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-miterlimit="10"
                stroke-width="2"
                transform="translate(1.5 1.5)"
              >
                <circle
                  cx="8.5"
                  cy="8.5"
                  r="9"
                />
                <path
                  d="M8.5 8.5V5.2M8.5 8.5l3.9 3.9"
                />
              </g>
            </svg>
          </div>
          <span>
            Not yet confirmed
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
